--- a/less/index.less
+++ b/less/index.less
@@ -3,4 +3,6 @@
 
 
 @import '../components/header/header.less';
+@import '../components/footer/footer.less';
 @import '../components/middle-bar/middle-bar.less';
+@import '../components/body/body.less';
