added image placeholders

--- a/components/body/body.less
+++ b/components/body/body.less
@@ -15,5 +15,40 @@ body {
                 text-align: center;
             }
         }
-    }
+        .about-container {
+            display: flex;
+            flex-direction: column;
+            .fontAmatic;
+            align-items: center;
+            padding-top: 30px;
+            padding-bottom: 30px;
+            .about-content {
+                padding-top: 30px;
+                padding-bottom: 30px;
+                .about-img {
+                    width: 250px;
+                    height: 250px;
+                    border-radius: 30px;
+                }
+                a, p {
+                    text-align: center;
+                    margin-top: 0px;
+                    margin-bottom: 0px;
+                    color: #3F7A1A
+                }
+                a {
+                    display: flex;
+                    justify-content: center;
+                    font-size: 42px;
+                    text-decoration: none;
+                }
+                a:hover {
+                    text-decoration: line-through;
+                }
+                p {
+                    font-size: 20px;
+                }
+            }
+        }  
+}
 }
