--- a/css/index.css
+++ b/css/index.css
@@ -50,6 +50,7 @@
     justify-content: center;
     text-decoration: none;
     font-size: 30px;
+    color: white;
   }
   footer a:hover {
     text-decoration: line-through;
@@ -107,5 +108,41 @@ body {
     font-size: 24px;
     margin-bottom: 60px;
     text-align: center;
+  }
+  body .about-container {
+    display: flex;
+    flex-direction: column;
+    font-family: 'Amatic SC', cursive;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  body .about-container .about-content {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+  body .about-container .about-content .about-img {
+    width: 250px;
+    height: 250px;
+    border-radius: 30px;
+  }
+  body .about-container .about-content a,
+  body .about-container .about-content p {
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #3F7A1A;
+  }
+  body .about-container .about-content a {
+    display: flex;
+    justify-content: center;
+    font-size: 42px;
+    text-decoration: none;
+  }
+  body .about-container .about-content a:hover {
+    text-decoration: line-through;
+  }
+  body .about-container .about-content p {
+    font-size: 20px;
   }
 }
