desktop header layout complete

--- a/components/body/body.less
+++ b/components/body/body.less
@@ -34,7 +34,7 @@ body {
                     text-align: center;
                     margin-top: 0px;
                     margin-bottom: 0px;
-                    color: #3F7A1A
+                    color: black;
                 }
                 a {
                     display: flex;
@@ -43,7 +43,7 @@ body {
                     text-decoration: none;
                 }
                 a:hover {
-                    text-decoration: line-through;
+                    text-decoration: #3F7A1A line-through;
                 }
                 p {
                     font-size: 20px;
