--- a/components/header/header.less
+++ b/components/header/header.less
@@ -1,4 +1,30 @@
-header {
+header {   
+    nav{ 
+    margin-left: 15%;
+    margin-right: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    .menu {
+        display: none;
+    }
+    .logo {
+        width: 40%;
+    }
+    .logo-link {
+        width: 80%;
+    }
+    .header-links a {
+        text-decoration: none;
+        color: black;
+        .fontAmatic;
+        font-size: 36px;
+        padding-left: 36px;
+        }
+        a:hover {
+            text-decoration: #3F7A1A line-through;
+        }
+}
     @media @mobile {
         nav {
             margin-left: 5%;
@@ -18,6 +44,7 @@ header {
             display: none;
         }
         .menu {
+            display: flex;
             width: 8%;
         }
     }
