--- a/components/middle-bar/middle-bar.less
+++ b/components/middle-bar/middle-bar.less
@@ -1,4 +1,15 @@
 body {
+    .bar {
+        background-color: rgb(63, 122, 26);
+        margin-top: -16px;
+        margin-left: -8px;
+        margin-right: -8px;
+        .fontAmatic;
+        color: white;
+        .phone {
+            width: 30%;
+        }
+    }
     @media @mobile {
     .bar {
     // background-image: url('../../assets/plant-bar.jpeg');
