--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -1,4 +1,33 @@
 footer {
+    .footer-container {
+        background-color: rgb(63, 122, 26);
+        margin-left: -8px;
+        margin-right: -8px;
+        color: white;
+    }
+    h2, a {
+        .fontAmatic;
+        text-align: center;
+        font-weight: 100;
+        font-size: 36px;
+        padding: 10px;
+    }
+    h2 {
+        margin-bottom: 0px;
+    }
+    a {
+        display: flex;
+        justify-content: center;
+        text-decoration: none;
+        font-size: 46px;
+        color: white;
+    }
+    a:hover {
+        text-decoration: line-through;
+    }
+    a:visited {
+        color: white;
+    }
     @media @mobile {
         .footer-container {
             background-color: rgb(63, 122, 26);
