about us layout complete

--- a/components/body/body.less
+++ b/components/body/body.less
@@ -1,5 +1,41 @@
 body {
     margin-bottom: 0px;
+    .about-container {
+        margin-left: 15%;
+        margin-right: 15%;
+        .fontAmatic;
+        .about-img {
+            width: 500px;
+            height: 500px;
+            border-radius: 30px;
+        }
+        .about-top, .about-mid, .about-bottom{
+            display: flex;
+            justify-content: space-between;
+        }
+        .about-content {
+            padding-top: 20px;
+            padding-bottom: 20px;
+            a, p {
+                text-align: center;
+                margin-top: 0px;
+                margin-bottom: 0px;
+                color: black;
+                }
+            a {
+                display: flex;
+                justify-content: center;
+                font-size: 42px;
+                text-decoration: none;
+                }
+            a:hover {
+                text-decoration: #3F7A1A line-through;
+                }
+            p {
+                font-size: 20px;
+                }
+            }
+    }
     @media @mobile {
         .features {
             .fontAmatic;
