--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,45 @@ body .bar .about-container .about-text p {
 body {
   margin-bottom: 0px;
 }
+body .about-container {
+  margin-left: 15%;
+  margin-right: 15%;
+  font-family: 'Amatic SC', cursive;
+}
+body .about-container .about-img {
+  width: 500px;
+  height: 500px;
+  border-radius: 30px;
+}
+body .about-container .about-top,
+body .about-container .about-mid,
+body .about-container .about-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+body .about-container .about-content {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+body .about-container .about-content a,
+body .about-container .about-content p {
+  text-align: center;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: black;
+}
+body .about-container .about-content a {
+  display: flex;
+  justify-content: center;
+  font-size: 42px;
+  text-decoration: none;
+}
+body .about-container .about-content a:hover {
+  text-decoration: #3F7A1A line-through;
+}
+body .about-container .about-content p {
+  font-size: 20px;
+}
 @media (max-width: 500px) {
   body .features {
     font-family: 'Amatic SC', cursive;
