--- a/components/body/body.less
+++ b/components/body/body.less
@@ -1,5 +1,16 @@
 body {
     margin-bottom: 0px;
+    .features {
+        .fontAmatic;
+        margin-left: 15%;
+        margin-right: 15%;
+        h2 {
+            font-size: 60px;
+        }
+        p {
+            font-size: 48px;
+        }
+    }
     .about-container {
         margin-left: 15%;
         margin-right: 15%;
@@ -25,14 +36,14 @@ body {
             a {
                 display: flex;
                 justify-content: center;
-                font-size: 42px;
+                font-size: 60px;
                 text-decoration: none;
                 }
             a:hover {
                 text-decoration: #3F7A1A line-through;
                 }
             p {
-                font-size: 20px;
+                font-size: 36px;
                 }
             }
     }
