--- a/components/middle-bar/middle-bar.less
+++ b/components/middle-bar/middle-bar.less
@@ -54,31 +54,25 @@ body {
     .bar {
     // background-image: url('../../assets/plant-bar.jpeg');
     background-color: rgb(63, 122, 26);
-    margin-top: -16px;
     margin-left: -8px;
     margin-right: -8px;
     color: white;
+    text-align: center;
         .phone {
         display: none;
         }
-        h1, h2, p {
-        padding-left: 50px;
-        padding-right: 50px;
-        text-align: center;
-        .fontAmatic;
+        .container {
+        .container-left {
+            padding-right: 0px;
+            h1 {
+                padding-top: 10px;
+                font-size: 50px;
+            }
+            p {
+                padding-bottom: 10px;
+            }
         }
-        h1 {
-        font-size: 50px;
-        padding-top: 110px;
-        }
-        h2 {
-        font-size: 30px;
-        font-weight: 100;
-        }
-        p {
-        font-size: 22px;
-        padding-bottom: 110px;
-        }
+    }
 }    
 }
 }
