added some styling

--- a/components/body/body.less
+++ b/components/body/body.less
@@ -18,6 +18,7 @@ body {
         .about-img {
             width: 500px;
             border-radius: 30px;
+            box-shadow: 4px 4px 6px grey;
         }
         .about-top, .about-mid, .about-bottom{
             display: flex;
