--- a/components/header/header.less
+++ b/components/header/header.less
@@ -9,16 +9,21 @@ header {
         display: none;
     }
     .logo {
-        width: 40%;
+        width: 300px;
     }
     .logo-link {
-        width: 80%;
+        width: 100%;
+    }
+    .header-links {
+        display: flex;
+        width: 100%;
+        justify-content: flex-end;
     }
     .header-links a {
         text-decoration: none;
         color: black;
         .fontAmatic;
-        font-size: 36px;
+        font-size: 3.6em;
         padding-left: 36px;
         }
         a:hover {
@@ -38,15 +43,19 @@ header {
          }   
         .logo {
             margin-top: 3px;
-            width: 70%;
+            width: 80%;
         }
         .nav-item {
             display: none;
         }
+        .header-links {
+            display: none;
+        }
         .menu {
             display: flex;
-            width: 8%;
+            align-items: center;
+            width: 10%;
         }
     }
-}
+}   
 }
