--- a/components/footer/footer.less
+++ b/components/footer/footer.less
@@ -1,5 +1,6 @@
 footer {
     .footer-container {
+        text-shadow: 2px 2px black;
         background-color: rgb(63, 122, 26);
         margin-left: -8px;
         margin-right: -8px;
