--- a/components/middle-bar/middle-bar.less
+++ b/components/middle-bar/middle-bar.less
@@ -1,10 +1,13 @@
 body {
     .bar {
-        background-color: rgb(63, 122, 26);
+        // background-color: rgb(63, 122, 26);
+        background: @green;
+        background-repeat: no-repeat;
         margin-left: -8px;
         margin-right: -8px;
         .fontAmatic;
         color: white;
+        text-shadow: 2px 2px black;
         .container {
             display: flex;
             flex-direction: row;
@@ -52,7 +55,6 @@ body {
     }
     @media @mobile {
     .bar {
-    // background-image: url('../../assets/plant-bar.jpeg');
     background-color: rgb(63, 122, 26);
     margin-left: -8px;
     margin-right: -8px;
