--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+html {
+  font-size: 62.5%;
+}
 .fontAmatic {
   font-family: 'Amatic SC', cursive;
 }
@@ -15,16 +18,21 @@ header nav .menu {
   display: none;
 }
 header nav .logo {
-  width: 40%;
+  width: 300px;
 }
 header nav .logo-link {
-  width: 80%;
+  width: 100%;
+}
+header nav .header-links {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
 }
 header nav .header-links a {
   text-decoration: none;
   color: black;
   font-family: 'Amatic SC', cursive;
-  font-size: 36px;
+  font-size: 3.6em;
   padding-left: 36px;
 }
 header nav a:hover {
@@ -44,17 +52,22 @@ header nav a:hover {
   }
   header nav .logo {
     margin-top: 3px;
-    width: 70%;
+    width: 80%;
   }
   header nav .nav-item {
     display: none;
   }
+  header nav .header-links {
+    display: none;
+  }
   header nav .menu {
     display: flex;
-    width: 8%;
+    align-items: center;
+    width: 10%;
   }
 }
 footer .footer-container {
+  text-shadow: 2px 2px black;
   background-color: #3f7a1a;
   margin-left: -8px;
   margin-right: -8px;
@@ -117,11 +130,13 @@ footer a:visited {
   }
 }
 body .bar {
-  background-color: #3f7a1a;
+  background: #3f7a1a;
+  background-repeat: no-repeat;
   margin-left: -8px;
   margin-right: -8px;
   font-family: 'Amatic SC', cursive;
   color: white;
+  text-shadow: 2px 2px black;
 }
 body .bar .container {
   display: flex;
@@ -211,6 +226,7 @@ body .about-container {
 body .about-container .about-img {
   width: 500px;
   border-radius: 30px;
+  box-shadow: 4px 4px 6px grey;
 }
 body .about-container .about-top,
 body .about-container .about-mid,
