--- a/components/body/body.less
+++ b/components/body/body.less
@@ -19,8 +19,7 @@ body {
         margin-right: 15%;
         .fontAmatic;
         .about-img {
-            width: 100%;
-            height: auto;
+            width: 50rem;
             border-radius: 30px;
             box-shadow: 4px 4px 6px grey;
         }
@@ -123,4 +122,14 @@ body {
             }
         }  
 }
+    @media @tablet {
+        .about-top, .about-mid, .about-bottom{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .features h2 {
+            text-align: center;
+        }
+    }
 }
