andy link styled

--- a/components/body/body.less
+++ b/components/body/body.less
@@ -121,6 +121,9 @@ body {
                 }
                 p {
                     font-size: 20px;
+                    .ui-site {
+                        font-size: 36px;
+                    }
                 }
             }
         }  
