--- a/css/index.css
+++ b/css/index.css
@@ -393,6 +393,9 @@ body .about-container .about-content .ui-site {
   body .about-container .about-content p {
     font-size: 20px;
   }
+  body .about-container .about-content p .ui-site {
+    font-size: 36px;
+  }
 }
 @media (max-width: 800px) {
   body .about-top,
