--- a/components/body/body.less
+++ b/components/body/body.less
@@ -3,6 +3,9 @@ body {
     .dropdown-menu {
         display: none;
     }
+    .dd-item {
+        display: none;
+    }
     .features {
         .fontAmatic;
         margin-left: 15%;
